--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "export-dir",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Tool to require all files in a single directory in Node.JS",
-  "keywords": ["Require Directory", "Require All", "Export All"],
+  "keywords": [
+    "Require Directory",
+    "Require All",
+    "Export All"
+  ],
   "author": {
     "name": "Cory Gross",
     "email": "CoryG89@gmail.com",
